@@ -74,6 +74,7 @@ Software Foundation, 59 Temple Place - Suite 330, Boston, MA
 #define LDW_AM_X	instruction_cd
 #define LDW_NAM_X	instruction_ce
 #define LDW_DSP_A	instruction_74
+#define LDW_A_Z         instruction_dc
 
 #define LDI_Z_Y         instruction_ed
 #define LDWI_Z_Y        instruction_cf
